fix search bar on mobile display

--- a/src/components/CourseSelect/CourseSelect.css
+++ b/src/components/CourseSelect/CourseSelect.css
@@ -1,11 +1,8 @@
 .search-bar {
     background-color: 	#f5f5f5 !important;
-    opacity: 1;
     z-index: 10; /* Makes it on top of everything else*/
     position: sticky;
-    top: 10px; /* creates separation between top of screen*/
     width: 100%;
-    padding: 2px 4px;
     display: flex;
     align-items: center;
 }
